build: run prepares manually
When yarn workspace is enabled, `lerna bootstrap` does not run
`prepare`.

--- a/packages/vault/package.json
+++ b/packages/vault/package.json
@@ -6,7 +6,7 @@
   "browser": "dist/browser.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rollup -c rollup.config.js",
+    "prepare": "rollup -c rollup.config.js",
     "test": "jest"
   },
   "files": [
