--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "scripts": {
     "postinstall": "lerna bootstrap",
+    "prepare": "lerna run prepare",
     "build": "lerna run build",
     "test": "lerna run test"
   },
