--- a/packages/vault-cli/package.json
+++ b/packages/vault-cli/package.json
@@ -6,7 +6,7 @@
     "vault": "bin.js"
   },
   "scripts": {
-    "build": "esbuild src/main.ts --bundle --platform=node --target=node12 --outdir=dist",
+    "prepare": "esbuild src/main.ts --bundle --platform=node --target=node12 --outdir=dist",
     "test": "exit 0"
   },
   "engines": {
