--- a/lerna.json
+++ b/lerna.json
@@ -2,12 +2,5 @@
   "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "independent",
-  "command": {
-    "version": {
-      "conventionalCommits": true,
-      "message": "chore(release): %s"
-    }
-  },
-  "ignoreChanges": ["**/__fixtures__/**", "**/__tests__/**", "**/*.md"]
+  "version": "independent"
 }
