--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "lerna run test"
   },
   "devDependencies": {
-    "lerna": "^3.22.1",
+    "lerna": "4.0.0",
     "lerna-wizard": "^1.1.1"
   }
 }
