--- a/packages/vault-cli/package.json
+++ b/packages/vault-cli/package.json
@@ -21,9 +21,9 @@
   },
   "devDependencies": {
     "@hsjs/vault": "^0.0.5",
-    "@types/node": "^14.14.17",
-    "esbuild": "^0.8.28",
-    "typescript": "^4.1.3"
+    "@types/node": "15.0.2",
+    "esbuild": "0.11.20",
+    "typescript": "4.2.4"
   },
   "publishConfig": {
     "access": "public"
