--- a/packages/vault/package.json
+++ b/packages/vault/package.json
@@ -13,17 +13,17 @@
     "dist"
   ],
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.17",
-    "esbuild-jest": "^0.3.0",
+    "@rollup/plugin-commonjs": "19.0.0",
+    "@rollup/plugin-node-resolve": "13.0.0",
+    "@types/jest": "26.0.23",
+    "@types/node": "15.0.2",
+    "esbuild-jest": "0.5.0",
     "jest": "^26.6.3",
-    "rollup": "^2.35.1",
+    "rollup": "2.47.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.29.0",
+    "rollup-plugin-typescript2": "0.30.0",
     "sjcl": "^1.0.8",
-    "typescript": "^4.1.3"
+    "typescript": "4.2.4"
   },
   "publishConfig": {
     "access": "public"
