--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install
         run: yarn
 
-      - name: Learn bootstrap
+      - name: lerna bootstrap
         run: yarn lerna bootstrap
       # - name: Lint
       #   run: yarn lint
