--- a/packages/vault-cli/package.json
+++ b/packages/vault-cli/package.json
@@ -12,6 +12,11 @@
   "engines": {
     "node": ">=12"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/haishanh/vault",
+    "directory": "packages/vault-cli"
+  },
   "files": [
     "dist",
     "bin.js"
@@ -21,8 +26,8 @@
   },
   "devDependencies": {
     "@hsjs/vault": "^0.0.5",
-    "@types/node": "15.0.2",
-    "esbuild": "0.11.20",
+    "@types/node": "15.6.0",
+    "esbuild": "0.12.1",
     "typescript": "4.2.4"
   },
   "publishConfig": {
