--- a/packages/vault/package.json
+++ b/packages/vault/package.json
@@ -9,6 +9,11 @@
     "prepare": "rollup -c rollup.config.js",
     "test": "jest"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/haishanh/vault",
+    "directory": "packages/vault"
+  },
   "files": [
     "dist"
   ],
@@ -16,10 +21,10 @@
     "@rollup/plugin-commonjs": "19.0.0",
     "@rollup/plugin-node-resolve": "13.0.0",
     "@types/jest": "26.0.23",
-    "@types/node": "15.0.2",
+    "@types/node": "15.6.0",
     "esbuild-jest": "0.5.0",
     "jest": "^26.6.3",
-    "rollup": "2.47.0",
+    "rollup": "2.48.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "0.30.0",
     "sjcl": "^1.0.8",
